2011-05-19 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	* src/libYARP_OS/include/yarp/os/Run.h
	Changed port naming protocol.

2011-05-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: patch from Stephane to implement
	ImageOfPixelRgbFloat [thanks Stephane Lallee]

2011-05-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PortTest.cpp: fix broken "yarp read ... /test"
	command [thanks Andrea Del Prete] [thanks Ugo Pattacini]

2011-05-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Port.cpp: add replyAndDrop method, to more
	easily handle connections that may only carry one message and then
	should terminate and close (specifically ROS XMLRPC administrative
	messages)

	* src/carriers/wire_rep_utils/WireTwiddler.h: add missing
	string <string> header file [thanks Giovanni Saponaro]
	[thanks Giorgio Metta]

2011-05-06  Lorenzo Natale  <lorenzo.natale@iit.it>
    * src/libYARP_OS/include/yarp/os/Run.h
    * src/libYARP_OS/src/Run.cpp
    general performance optimization

2011-05-05  Lorenzo Natale  <lorenzo.natale@iit.it>
    * src/libYARP_OS/include/yarp/os/Run.h
    * src/libYARP_OS/src/Run.cpp
      removed subsequent attempts to connect to server, handle
      cases in which the server is not available

2011-05-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: rewrite rpc utility
	to use a port (without a management thread).  Add message
	resending when rpc server dies and is restarted.

	* src/libYARP_OS/src/Network.cpp: revive ability to use
	YARP without nameserver, by providing port names along
	the lines of "tcp://127.0.0.1:8888" rather than "/read".

2011-04-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/tcpros_carrier/TcpRosStream.h: add missing
	header file [thanks Giorgio Metta]

2011-04-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Log.h: stack trace to